# JVM2WASM

./: .gitignore  README.md
assets/: README.md
cpp/: CMakeLists.txt  JVM2CPP.cap  jvm2wasm-base.cpp  jvm2wasm-types.h  release-compile.sh  release-configure.sh
cpp/glad/include/glad/: gl.h
src/: Files.kt  JVM2WASM.kt  WASM2CPP.kt  index.html  index.js  index0.js  resources.txt
src/annotations/: Alias.kt  Boring.kt  Export.kt  JavaScript.kt  JavaScriptNative.kt  JavaScriptWASM.kt  NoInline.kt  NoThrow.kt  NotCalled.kt  PureFunction.kt  PureJavaScript.kt  RevAlias.kt  UnsafePointerField.java  UsedIfIndexed.kt  WASM.kt
src/binary/: BinaryWriter.kt  Opcode.kt  TypeKind.kt
src/dependency/: ActuallyUsedIndex.kt  DependencyIndex.kt  DependencyResolver.kt  StaticDependencies.kt
src/dyninvoke/: DynPrinter.kt
src/engine/: Engine.java  GFXBase2.kt  NoAudio.java  README.md  SimpleStudio.kt  SpinningCube.java  TestScene.kt  TextGen.java  TextGeneratorImpl.kt  VRRoutineImpl.kt  VRRoutineJS.java  VirtualFileRef.java  WebGLWindow.java  WebRef2.java
src/graphing/: BranchNode.kt  EndNodeExtractor.kt  ExtractBigLoop.kt  ExtractEndNodes.kt  ExtractStartNodes.kt  GraphingNode.kt  InefficientNodeStack.kt  LargeSwitchStatement.kt  LoadStoreStack.kt  Node.kt  ReturnNode.kt  SaveGraph.kt  SequenceNode.kt  SolveLinearTree.kt  StackCallUtils.kt  StackDepthTester.kt  StackValidator.kt  StackVariables.kt  StructuralAnalysis.kt
src/hierarchy/: Annota.kt  AnnotaVisitor.kt  DelayedLambdaUpdate.kt  DynPrinter.kt  FirstClassIndexer.kt  FirstFieldVisitor.kt  FirstMethodIndexer.kt  Generic.kt  GenericSig.kt  HierarchyIndex.kt
src/highlevel/: FieldGetInstr.kt  FieldSetInstr.kt  HighLevelInstruction.kt  InvokeDynamicInstr.kt  InvokeFinalInstr.kt  InvokeInterfaceInstr.kt  InvokeMethodInstr.kt  InvokeSpecialInstr.kt  InvokeStaticInstr.kt  InvokeSuperInstr.kt  PseudoHighLevelInstr.kt  PtrDupInstr.kt  ResolvedMethodInstr.kt  UnresolvedMethodInstr.kt
src/insn/: Constants.kt  LocalGet.kt  LocalSet.kt
src/interpreter/: StackFrame.kt  WASMEngine.kt
src/jvm/: ArrayAccessSafe.java  ArrayAccessUnchecked.java  ArrayIterator.kt  ArrayWrapper.kt  Boxing.java  Chars.java  Debug.java  FillBuffer.java  GC.java  GCGapFinder.java  GCTraversal.java  GCX.java  GarbageCollector.java  GarbageCollectorFlags.java  InPlaceStableSort.java  JNA.java  JVM.java  JVM32.java  JVMFlags.java  JVMShared.java  JVMValues.java  JavaAWT.java  JavaConcurrent.java  JavaIO.java  JavaLang.java  JavaNIO.java  JavaReflect.java  JavaReflectMethod.java  JavaThrowable.java  JavaUtil.java  JavaX.java  Kotlin.java  KotlinReflect.java  LWJGLxAssimp.java  LWJGLxGLFW.java  LWJGLxGamepad.java  LWJGLxOpenAL.java  LWJGLxOpenGL.java  MemDebug.java  MemoryCorruption.java  (+9 more)
src/optimizer/: InstructionProcessor.kt  InstructionReplacer.kt  ReplaceOptimizer.kt  StaticInitOptimizer.kt  VariableValidator.kt
src/test/: Animals.kt  AnimalsJava.java  BaseTest.java  CatchTest.java  EnumTest.java  FindPushPopIssue.kt  GenericsTest.java  HashMapTest.java  InlineIfTest.java  InvokeTest.kt  LambdaTest.java  SwitchTest.java  TestClass.kt  ThrowTest.kt
src/tmp/: comp.sh
src/translator/: ClassTranslator.kt  FieldGetInstr.kt  FieldSetInstr.kt  FoundBetterReader.kt  GeneratorIndex.kt  JavaTypes.kt  ListMap.kt  LoadStoreHelper.kt  LocalVar.kt  LocalVarInfo.kt  LocalVariableOrParam.kt  LocalVariables.kt  MethodTranslator.kt  (+2 more)
targets/: bench.html
tmp/: CMakeLists.txt  comp.sh  jvm2wasm-base.cpp
wasm/: wasm-compile.sh  wasm2wat.sh  writer.html  writer.js
webgpu/: texturedCube.js
(+289 files in other folders)
